feat: small unit test for documents
